# docs/api/openapi3.json
@@ -1557,6 +1557,17 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "example": "4yJ3n3D8E2",
+            "in": "query",
+            "name": "identity-id",
+            "schema": {
+              "example": "4yJ3n3D8E2",
+              "format": "uid",
+              "pattern": "[\\da-zA-HJ-NP-Z]{1,11}",
+              "type": "string"
+            }
           }
         ],
         "responses": {
